--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-# Entorno virtual
-venv/
-.env/
-
-# Python
+data/
+.venv/
 __pycache__/
-*.pyc
-
-# VS Code
-.vscode/
-
-# Sistema
+.ipynb_checkpoints/
 .DS_Store
-Thumbs.db
+*.log
+notebooks/
+artifacts/
